updated home work sheets

--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Horiseon - Helping you get the right attention with your web marketing</title>
 </head>
 
@@ -54,24 +54,24 @@
     </main'>
 
     <nav class="benefits"> <!--These are the benefits listed down the right hand side of the page-->
-        <div class="nav">
+        <div>
             <article >
                 <h2>Lead Generation</h2>
-             <img src="./assets/images/lead-generation.png" alt="black and white logo of funnel with cog going in and dollar sign coming out"></img>
+             <img src="./assets/images/lead-generation.png" alt="black and white logo of funnel with cog going in and dollar sign coming out" class="nav-img"></img>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </article>
             <article>
              <h2>Brand Awareness</h2>
-             <img src="./assets/images/brand-awareness.png" alt="black and white image of portrait shot of person with a lightbulb head"></img>
+             <img src="./assets/images/brand-awareness.png" alt="black and white image of portrait shot of person with a lightbulb head" class="nav-img"></img>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </article>
             <article>
                 <h2>Cost Management</h2>
-                <img src="./assets/images/cost-management.png"alt="black and white image of cog with multiple coins with dollar signs on it"></img>
+                <img src="./assets/images/cost-management.png"alt="black and white image of cog with multiple coins with dollar signs on it" class="nav-img"></img>
                 <p>
                  As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
              </p>
